(fix) Remove Hello from index.html

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title>React Ice Cream Cart!</title>
   </head>
   <body>
-    <div id="main-app">Hello</div>
+    <div id="main-app"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
